Track overview improvements

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -75,12 +75,12 @@ de:
       menu_header: 'Merkmalanzeige'
       menu_sep: 'Auf unterschiedlichen Grafiken'
       menu_one: 'Auf einer Grafik'
-      dt_dist: 'Entfernung:'
-      dt_elev: 'Höhendifferenz:'
-      dt_dur: 'Dauer:'
-      dt_hspd: 'Horizontale Geschwindigkeit:'
-      dt_vspd: 'Vertikale Geschwindigkeit:'
-      dt_gr: 'Flugqualität:'
+      dt_dist: 'Entfernung'
+      dt_elev: 'Höhendifferenz'
+      dt_dur: 'Dauer'
+      dt_hspd: 'Horizontale Geschwindigkeit'
+      dt_vspd: 'Vertikale Geschwindigkeit'
+      dt_gr: 'Flugqualität'
       units_header: 'Maßeinheit:'
       m_units_metric: 'Metrisches Einheitssystem (m, km/h.)'
       m_units_imperial: 'Imperiale Einheiten (Fuß, mi/h)'
