--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -77,12 +77,12 @@ en:
       menu_header: 'Show data:'
       menu_sep: 'On separate charts'
       menu_one: 'On single chart'
-      dt_dist: 'Distance:'
-      dt_elev: 'Elevation:'
-      dt_dur: 'Duration:'
-      dt_hspd: 'Ground Speed:'
-      dt_vspd: 'Vertical speed:'
-      dt_gr: 'Glide ratio:'
+      dt_dist: 'Distance'
+      dt_elev: 'Elevation'
+      dt_dur: 'Duration'
+      dt_hspd: 'Ground Speed'
+      dt_vspd: 'Vertical speed'
+      dt_gr: 'Glide ratio'
       units_header: 'Units:'
       m_units_metric: 'Metric'
       m_units_imperial: 'Imperial'
