--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -75,12 +75,12 @@ es:
       menu_header: 'La representación de los resultados:'
       menu_sep: 'En gráficos difirentes'
       menu_one: 'En el mismo gráfico'
-      dt_dist: 'La distancia:'
-      dt_elev: 'La diferencia de altura:'
-      dt_dur: 'La duración:'
-      dt_hspd: 'Velocidad horizontal:'
-      dt_vspd: 'Velocidad vertical:'
-      dt_gr: 'La calidad del vuelo:'
+      dt_dist: 'La distancia'
+      dt_elev: 'La diferencia de altura'
+      dt_dur: 'La duración'
+      dt_hspd: 'Velocidad horizontal'
+      dt_vspd: 'Velocidad vertical'
+      dt_gr: 'La calidad del vuelo'
       units_header: 'Unidades de medida:'
       m_units_metric: 'Métricas (m, km/h)'
       m_units_imperial: 'Imperiales (pie,millas/h)'
