--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -75,12 +75,12 @@ ru:
       menu_header: 'Отображение показателей'
       menu_sep: 'На разных графиках'
       menu_one: 'На одном графике'
-      dt_dist: 'Дистанция:'
-      dt_elev: 'Перепад высот:'
-      dt_dur: 'Продолжительность:'
-      dt_hspd: 'Горизонт. скорость:'
-      dt_vspd: 'Верт. скорость:'
-      dt_gr: 'Качество полета:'
+      dt_dist: 'Дистанция'
+      dt_elev: 'Перепад высот'
+      dt_dur: 'Продолжительность'
+      dt_hspd: 'Путевая скорость'
+      dt_vspd: 'Вертикальная скорость'
+      dt_gr: 'Качество полета'
       units_header: 'Единицы измерения:'
       m_units_metric: 'Метрические (м, км/ч)'
       m_units_imperial: 'Имперские (футы, мили/ч)'
