создание удаление раундов

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -162,7 +162,7 @@ ru:
       events:
         title: 'Посоревноваться:'
         coming: 'Скоро будет'
-        create: 'Создать событие'
+        create: 'Создать соревнование'
         future: 'Ближайшие события:'
         betatestersonly: 'Создание мероприятий в данный момент доступно только для участников программы тестирования.'
         table:
