--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,7 +4,7 @@ en:
       track:
         id: '#'
         name: 'Pilot'
-        suit: 'Wingsuit'
+        suit: 'Suit'
         place: 'Place'
         comment: 'Comment'
         uploaded_at: 'Uploaded at'
@@ -243,6 +243,15 @@ en:
     speed: 'Speed'
     distance: 'Distance'
     time: 'Time'
+  virtual_competitions:
+    tasks:
+      speed: 'Task is to fly as fast as possible horizontally over the ground through the competition window (%{range_from} - %{range_to} m)'
+      distance: 'Task is to fly as far as possible through the competition window (%{range_from} - %{range_to} m)'
+      distance_in_time: 'Task is to fly as far as possible in %{parameter} sec'
+      time: 'Task is to fly with the slowest fall rate possible through the competition window (%{range_from} - %{range_to} m)'
+    place: 'Location: %{place}'
+    worldwide: 'Worldwide'
+    suit: 'Suit type: %{suit}'
   users:
     profile:
       show:
