--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -77,7 +77,7 @@ ru:
       eldst_dst: "Дистанция"
       eldst_el_s: "Пройдено по высоте"
       eldst_dst_s: "Пройдено Расстояние"
-      eldst_h_s: "'Высота'"
+      eldst_h_s: "Высота"
       spdch: "Вертикальная и горизонтальная скорость"
       spd_ax: "Скорость"
       spd_hs: "Путевая скорость"
