--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -244,3 +244,7 @@ de:
         title: 'Profile'
         edit_email_pass: "Ändern Sie E-Mail-Adresse oder Passwort"
         edit_reg_data: "E-mail-adresse oder passwort"
+  will_paginate:
+    previous_label: "&#8592; Previous"
+    next_label: "Next &#8594;"
+    page_gap: "&hellip;"
