--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -248,3 +248,7 @@ es:
         title: 'Perfil'
         edit_email_pass: "Edit email or password"
         edit_reg_data: "Email and password"
+  will_paginate:
+    previous_label: "&#8592; Previous"
+    next_label: "Next &#8594;"
+    page_gap: "&hellip;"
