--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -289,3 +289,7 @@ ru:
         title: 'Редактирование профиля'
         edit_email_pass: "Изменение адреса эл. почты или пароля"
         edit_reg_data: "Изменение регистрационных данных"
+  will_paginate:
+    previous_label: "&#8592; Previous"
+    next_label: "Next &#8594;"
+    page_gap: "&hellip;"
