added placeholder and trancslations

--- a/config/locales/devise.de.yml
+++ b/config/locales/devise.de.yml
@@ -4,6 +4,7 @@ de:
   activerecord:
     attributes:
       user:
+        name_placeholder: 'John Doe'
         current_password: Bisheriges Passwort
         email: E-Mail
         password: Passwort
