--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -248,6 +248,7 @@ en:
       speed: 'Task is to fly as fast as possible horizontally over the ground through the competition window (%{range_from} - %{range_to} m)'
       distance: 'Task is to fly as far as possible through the competition window (%{range_from} - %{range_to} m)'
       distance_in_time: 'Task is to fly as far as possible in %{parameter} sec'
+      straightline_distance_in_time: 'Task is to fly as far as possible in %{parameter} sec. Distance measuring as a straight-line.'
       time: 'Task is to fly with the slowest fall rate possible through the competition window (%{range_from} - %{range_to} m)'
     place: 'Location: %{place}'
     worldwide: 'Worldwide'
