--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -272,6 +272,7 @@ ru:
       speed: 'Цель: лететь с максимально возможной горизонтальной скоростью находясь в зачетном окне (%{range_from} - %{range_to} м)'
       distance: 'Цель: пролететь максимальное расстояние находясь в зачетном окне (%{range_from} - %{range_to} м)'
       distance_in_time: 'Цель: пролететь максимальное расстояние за %{parameter} сек'
+      straightline_distance_in_time: 'Цель: пролететь максимальное расстояние за %{parameter} сек. Расстояние измеряется по прямой линии.'
       time: 'Цель: лететь с минимально возможной вертикальной скоростью находясь в зачетном окне (%{range_from} - %{range_to} м)'
     place: 'Место проведения: %{place}'
     worldwide: 'Всемирные'
