Hotfix user registration

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -23,6 +23,12 @@ ru:
     month_names: [~, Январь, Февраль, Март, Апрель, Май, Июнь, Июль, Август, Сентябрь, Октябрь, Ноябрь, Декабрь]
     abbr_month_names: [~, Янв, Фев, Мар, Апр, Май, Июн, Июл, Авг, Сент, Окт, Нояб, Дек] 
   activerecord:
+    errors:
+      models:
+        user:
+          attributes:
+            email:
+              taken: 'Пользователь с указанным адресом электронной почты уже существует'
     attributes:
       track:
         id: '#'
