--- a/config/locales/views/events/show.ru.yml
+++ b/config/locales/views/events/show.ru.yml
@@ -1,6 +1,18 @@
 ru:
   events:
     show:
+      section: 'Класс'
       competitor: 'Участник'
+      round: 'Раунд'
       comp_window: 'Соревновательный диапазон:'
       total: 'Итого'
+      profile: 'Профиль:'
+      profile_caption: "Не можете найти нужный профиль?"
+      toggle_profile: 'Создайте новый'
+      profile_placeholder: 'Выберите профиль из списка' 
+      profile_or: 'Или'
+      profile_choose: 'выберите профиль из списка'
+      suit: 'Костюм:'
+      suit_placeholder: 'Выберите костюм из списка'
+      new: 'Добавление'
+      edit: 'Редактирование'
