Events translation - settings modal

--- a/config/locales/views/events/show.ru.yml
+++ b/config/locales/views/events/show.ru.yml
@@ -16,3 +16,4 @@ ru:
       suit_placeholder: 'Выберите костюм из списка'
       new: 'Добавление'
       edit: 'Редактирование'
+      organizers: 'Организаторы'
