--- a/config/locales/views/events/show.ru.yml
+++ b/config/locales/views/events/show.ru.yml
@@ -17,3 +17,4 @@ ru:
       new: 'Добавление'
       edit: 'Редактирование'
       organizers: 'Организаторы'
+      organizers_placeholder: 'Добавьте организатора из списка'
