add place to events, place controller, api/place controller

--- a/config/locales/models/events.en.yml
+++ b/config/locales/models/events.en.yml
@@ -6,6 +6,7 @@ en:
       event:
         name: 'Name'
         status: 'Status'
+        place: 'Place'
   event_status: 
     draft: 'Draft'
     published: 'Published'
