--- a/config/locales/views/events/show.en.yml
+++ b/config/locales/views/events/show.en.yml
@@ -18,3 +18,4 @@ en:
       edit: 'Edit'
       organizers: 'Organizers'
       organizers_placeholder: 'Add organizer from list'
+      place_placeholder: 'Select place from list'
