--- a/config/locales/views/events/show.ru.yml
+++ b/config/locales/views/events/show.ru.yml
@@ -18,3 +18,4 @@ ru:
       edit: 'Редактирование'
       organizers: 'Организаторы'
       organizers_placeholder: 'Добавьте организатора из списка'
+      place_placeholder: 'Выберите место из списка'
