Displaying track results, refactoring locales files

--- a/config/locales/views/tracks/show.ru.yml
+++ b/config/locales/views/tracks/show.ru.yml
@@ -44,3 +44,9 @@ ru:
       raw_ground_speed: 'Путевая скорость (Нефильтр.)'
       raw_vertical_speed: 'Верт. скорость (Нефильтр.)'
       raw_gr: 'Качество (Нефильтр.)'
+      charts: 'Графики'
+      results: 'Результаты'
+      comp_result: 'Результат в соревновании'
+      online_comp_results: 'Результаты в онлайн соревнованиях'
+      best_results: 'Лучшие результаты'
+      window: 'окно'
