Displaying place and judges on event page

--- a/config/locales/views/events/show.en.yml
+++ b/config/locales/views/events/show.en.yml
@@ -19,3 +19,4 @@ en:
       organizers: 'Organizers'
       organizers_placeholder: 'Add organizer from list'
       place_placeholder: 'Select place from list'
+      judges: 'Judges'
