--- a/config/locales/views/events/show.ru.yml
+++ b/config/locales/views/events/show.ru.yml
@@ -19,3 +19,4 @@ ru:
       organizers: 'Организаторы'
       organizers_placeholder: 'Добавьте организатора из списка'
       place_placeholder: 'Выберите место из списка'
+      judges: 'Судьи'
