--- a/config/locales/views/static_pages/index.ru.yml
+++ b/config/locales/views/static_pages/index.ru.yml
@@ -3,6 +3,17 @@ ru:
     index:
       title: 'Летай! Соревнуйся! Побеждай!'
       subtitle: 'Все еще бета'
+      skyderby_is: 'Skyderby - это...'
+      tracks_analysis: 'Анализ GPS треков'
+      tracks_analysis_desc: 'Треки полетов в вингсьютах и трексьютах, skydive и b.a.s.e.'
+      tracks_list: 'Список треков'
+      online_competitions: 'Онлайн соревнования'
+      online_comp_desc: 'Участвуйте в онлайн соревнованиях в дисциплинах Дальность, Скорость, Время, Дистанция за время.'
+      online_comp_list: 'Онлайн соревнования'
+      events: 'Соревнования'
+      events_desc: 'Участвуйте в соревнованиях и проводите свои по правилам FAI или определенных организаторами.'
+      events_list: 'Список соревнований'
+      online_comps_leaders: 'Лидеры онлайн соревнований'
       track_form:
         title: 'Посмотреть и оценить трек:'
         name: 'Вас зовут:'
@@ -26,28 +37,6 @@ ru:
           file_size_w1_html: "'Размер файла : '"
           file_size_w2_html: "'Размер файла не должен превышать 1 Мб'"
         kind: "Вид прыжка:"
-      or: 'Или'
-      events:
-        title: 'Посоревноваться:'
-        coming: 'Скоро будет'
-        create: 'Создать соревнование'
-        future: 'Ближайшие события:'
-        betatestersonly: 'Создание мероприятий в данный момент доступно только для участников программы тестирования.'
-        table:
-          event: 'Событие'
-          starts: 'Дата начала'
-          ends: 'Дата окончания'
-        form:
-          title: 'Новое мероприятие'
-          name: 'Имя:'
-          place: 'Локация:'
-          start_at: 'Период:'
-          end_at: ' - '
-          range_from: 'Соревновательный диапазон:'
-          range_to: ' - '
-          reg_start_at: "Регистрация:"
-          reg_end_at: "-"
-        completed: "Прошедшие события:"
       desc: "Анализ GPS треков и проведение соревнований в формате GPS Performance."
       goto_event: "На страницу события >>"
       supported_formats: "Поддерживаемые форматы и приборы:"
