--- a/config/locales/views/layouts/ru.header.yml
+++ b/config/locales/views/layouts/ru.header.yml
@@ -16,3 +16,4 @@ ru:
       track_analizer: 'Анализ треков'
       upload_track: "Загрузить трек"
       competitions: "Соревнования"
+      online_competitions: 'Онлайн соревнования'
