--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -55,7 +55,7 @@ ru:
       distance_in_time: 'Цель: пролететь максимальное расстояние за %{parameter} сек'
       straightline_distance_in_time: 'Цель: пролететь максимальное расстояние за %{parameter} сек. Расстояние измеряется по прямой линии.'
       time: 'Цель: лететь с минимально возможной вертикальной скоростью находясь в зачетном окне (%{range_from} - %{range_to} м)'
-    place: 'Место проведения: %{place}'
+    place: 'Место проведения:'
     worldwide: 'Всемирные'
     suit: 'Тип костюма: %{suit}'
   users:
