--- a/config/locales/views/layouts/en.header.yml
+++ b/config/locales/views/layouts/en.header.yml
@@ -4,7 +4,7 @@ en:
       home: 'SKY DERBY'
       tracks: 'Tracks'
       about: 'About project'
-      sign_in: 'Sign in'
+      sign_in: 'Log in'
       sign_up: 'Sign up'
       sign_out: 'Sign out'
       login_email: 'Email address'
