Online competitions, action show. Styling layout

--- a/config/locales/views/virtual_competitions/show.ru.yml
+++ b/config/locales/views/virtual_competitions/show.ru.yml
@@ -2,3 +2,4 @@ ru:
   virtual_competitions:
     show:
       show_details: 'Нажмите для просмотра деталей трека'
+      show_profile: 'Нажмите для просмотра профиля пилота'
