--- a/config/locales/views/virtual_competitions/show.en.yml
+++ b/config/locales/views/virtual_competitions/show.en.yml
@@ -2,3 +2,4 @@ en:
   virtual_competitions:
     show:
       show_details: 'Click to view track details'
+      show_profile: 'Click to view profile'
