added full speed to spd chart

--- a/config/locales/views/charts/spd_chart.en.yml
+++ b/config/locales/views/charts/spd_chart.en.yml
@@ -9,3 +9,5 @@ en:
         raw_ground: 'Ground speed (Raw)'
         vertical: 'Vertical speed'
         raw_vertical: 'Vertical speed (Raw)'
+        full: 'Full speed'
+        raw_full: 'Full speed (Raw)'
