--- a/config/locales/views/charts/spd_chart.ru.yml
+++ b/config/locales/views/charts/spd_chart.ru.yml
@@ -9,3 +9,5 @@ ru:
         raw_ground: 'Путевая скорость (Нефильтр.)'
         vertical: 'Верт. Скорость'
         raw_vertical: 'Верт. скорость (Нефильтр.)'
+        full: 'Полная скорость'
+        raw_full: 'Полная скорость (Нефильтр.)'
