--- a/config/locales/views/charts/spd_chart.de.yml
+++ b/config/locales/views/charts/spd_chart.de.yml
@@ -1,4 +1,4 @@
-en:
+de:
   charts:
     spd:
       title: 'Vertikale und horizontale Geschwindigkeit'
@@ -9,3 +9,5 @@ en:
         raw_ground: 'Horizontale Geschwindigkeit (Roh)'
         vertical: 'Vertikale Geschwindigkeit'
         raw_vertical: 'Vertikale Geschwindigkeit (Roh)'
+        full: 'Geschwindigkeit 3D'
+        raw_full: 'Geschwindigkeit 3D (Roh)'
