--- a/config/locales/views/charts/spd_chart.es.yml
+++ b/config/locales/views/charts/spd_chart.es.yml
@@ -1,4 +1,4 @@
-en:
+es:
   charts:
     spd:
       title: 'Velocidad vertical y horizontal'
@@ -9,3 +9,5 @@ en:
         raw_ground: 'Velocidad horizontal (bruto)'
         vertical: 'Velocidad vertical'
         raw_vertical: 'Velocidad vertical (bruto)'
+        full: 'Velocidad 3D'
+        raw_full: 'Velocidad 3D (bruto)'
