Added validation that section filled

--- a/config/locales/models/competitors.ru.yml
+++ b/config/locales/models/competitors.ru.yml
@@ -8,6 +8,8 @@ ru:
               blank: "Не заполнено обязательное поле 'Костюм'"
             user_profile:
               blank: "Не заполнено обязательное поле 'Профиль пилота'"
+            section:
+              blank: "Не заполнено обязательное поле 'Класс'"
             base:
               restrict_dependent_destroy:
                 many: 'Для удаления участника необходимо сначала удалить его результаты.'
