--- a/config/locales/models/competitors.en.yml
+++ b/config/locales/models/competitors.en.yml
@@ -8,6 +8,8 @@ en:
               blank: "'Suit' has to be filled"
             user_profile:
               blank: "'Pilot profile' has to be filled"
+            section:
+              blank: "'Class' has to be filled"
             base:
               restrict_dependent_destroy:
                 many: 'To delete competitor delete his results first.'
