--- a/config/locales/views/charts/all_data_chart.de.yml
+++ b/config/locales/views/charts/all_data_chart.de.yml
@@ -9,6 +9,7 @@ de:
       series:
         horiz_speed: 'Horizontale Geschwindigkeit'
         vert_speed: 'Vertikale Geschwindigkeit'
+        full_speed: 'Geschwindigkeit 3D'
         gr: 'Flugqualität'
         height: 'Höhe'
         distance: 'Entfernung'
