Fixed select2 dropdown, refactored competitors, event settings, organizers.

--- a/config/locales/models/events.en.yml
+++ b/config/locales/models/events.en.yml
@@ -7,6 +7,7 @@ en:
         name: 'Name'
         status: 'Status'
         place: 'Place'
+        starts_at: 'Starts at'
   event_status: 
     draft: 'Draft'
     published: 'Published'
