Added results modals (create/show)

--- a/config/locales/views/events/show.en.yml
+++ b/config/locales/views/events/show.en.yml
@@ -20,3 +20,9 @@ en:
       organizers_placeholder: 'Add organizer from list'
       place_placeholder: 'Select place from list'
       judges: 'Judges'
+      result: 'Result'
+      result_file: 'File with track'
+      result_or: 'Or'
+      result_in: 'in'
+      toggle_new_track: 'upload new one'
+      toggle_existed_track: 'select existed track'
