--- a/config/locales/views/events/show.ru.yml
+++ b/config/locales/views/events/show.ru.yml
@@ -23,5 +23,9 @@ ru:
       track: 'Трек'
       track_upoaded: 'Загрузил'
       delete_result: 'Удалить результат'
-      result_select: 'Выберите существующий трек'
+      result: 'Результат'
+      result_file: 'Файл трека'
       result_or: 'Или'
+      result_in: 'в'
+      toggle_existed_track: 'выберите существующий трек'
+      toggle_new_track: 'загрузите новый трек'
