--- a/config/locales/views/tracks/show.en.yml
+++ b/config/locales/views/tracks/show.en.yml
@@ -26,3 +26,4 @@ en:
       online_comp_results: 'Online competitions results'
       best_results: 'Best results'
       window: 'window'
+      loading: 'Loading track data'
