--- a/config/locales/views/tracks/show.ru.yml
+++ b/config/locales/views/tracks/show.ru.yml
@@ -26,3 +26,4 @@ ru:
       online_comp_results: 'Результаты в онлайн соревнованиях'
       best_results: 'Лучшие результаты'
       window: 'окно'
+      loading: 'Загрузка данных трека'
