New places index page. Changes to app layout.

--- a/config/locales/views/layouts/de.header.yml
+++ b/config/locales/views/layouts/de.header.yml
@@ -16,3 +16,4 @@ de:
       track_analizer: 'Trackanalyse'
       upload_track: "Track hochladen"
       competitions: "Wettkampf"
+      places: 'Orte'
