--- a/config/locales/views/layouts/en.footer.yml
+++ b/config/locales/views/layouts/en.footer.yml
@@ -1,5 +1,6 @@
 en:
   application:
     footer:
-      owner: 'Aleksandr Kunin'
+      made_with: 'Made with'
+      owner: 'by Aleksandr Kunin'
       fb_page: "Application's page"
