--- a/config/locales/views/layouts/en.header.yml
+++ b/config/locales/views/layouts/en.header.yml
@@ -17,3 +17,4 @@ en:
       upload_track: "Upload track"
       competitions: "Competitions"
       online_competitions: 'Online competitions'
+      places: 'Places'
