--- a/config/locales/views/layouts/ru.header.yml
+++ b/config/locales/views/layouts/ru.header.yml
@@ -2,7 +2,7 @@ ru:
   application:
     header:
       home: 'SKY DERBY'
-      tracks: 'Список треков'
+      tracks: 'Треки'
       about: 'О проекте'
       sign_in: 'Войти'
       sign_up: 'Зарегистрироваться'
@@ -17,3 +17,4 @@ ru:
       upload_track: "Загрузить трек"
       competitions: "Соревнования"
       online_competitions: 'Онлайн соревнования'
+      places: 'Локации'
