--- a/config/locales/views/static_pages/index.ru.yml
+++ b/config/locales/views/static_pages/index.ru.yml
@@ -14,6 +14,7 @@ ru:
       events_desc: 'Участвуйте в соревнованиях и проводите свои по правилам FAI или определенных организаторами.'
       events_list: 'Список соревнований'
       online_comps_leaders: 'Лидеры онлайн соревнований'
+      donate: 'Если Вам нравится Skyderby - Вы можете оказать проекту финансовую поддержку.'
       track_form:
         title: 'Посмотреть и оценить трек:'
         name: 'Вас зовут:'
