Created round map view

--- a/config/locales/views/events/show.en.yml
+++ b/config/locales/views/events/show.en.yml
@@ -4,6 +4,7 @@ en:
       section: 'Class'
       competitor: 'Competitor'
       round: 'Round'
+      round_map_view: 'Round tracks on map'
       comp_window: 'Competition window'
       total: 'Total'
       profile: 'Profile'
@@ -19,10 +20,13 @@ en:
       organizers: 'Organizers'
       organizers_placeholder: 'Add organizer from list'
       place_placeholder: 'Select place from list'
-      judges: 'Judges'
       result: 'Result'
       result_file: 'File with track'
       result_or: 'Or'
       result_in: 'in'
       toggle_new_track: 'upload new one'
       toggle_existed_track: 'select existed track'
+      event_sponsors: 'Event sponsors'
+      add_sponsor: 'Add sponsor'
+      judges: 'Judges'
+      add_judge: 'Add judge'
