--- a/config/locales/views/events/show.ru.yml
+++ b/config/locales/views/events/show.ru.yml
@@ -4,6 +4,7 @@ ru:
       section: 'Класс'
       competitor: 'Участник'
       round: 'Раунд'
+      round_map_view: 'Треки раунда на карте'
       comp_window: 'Соревновательный диапазон'
       total: 'Итого'
       profile: 'Профиль'
@@ -19,7 +20,6 @@ ru:
       organizers: 'Организаторы'
       organizers_placeholder: 'Добавьте организатора из списка'
       place_placeholder: 'Выберите место из списка'
-      judges: 'Судьи'
       track: 'Трек'
       track_upoaded: 'Загрузил'
       delete_result: 'Удалить результат'
@@ -29,3 +29,7 @@ ru:
       result_in: 'в'
       toggle_existed_track: 'выберите существующий трек'
       toggle_new_track: 'загрузите новый трек'
+      event_sponsors: 'Спонсоры соревнования'
+      add_sponsor: 'Добавить спонсора'
+      judges: 'Судьи'
+      add_judge: 'Добавить судью'
