--- a/config/locales/views/tracks/index.en.yml
+++ b/config/locales/views/tracks/index.en.yml
@@ -4,4 +4,7 @@ en:
       title: 'Recently uploaded tracks:'
       track_not_found: 'Track #%{id} has not found'
       all: 'All'
-
+      filters: 'Filters'
+      filter_by_pilot: 'By pilot'
+      filter_by_suit: 'By suit'
+      filter_by_place: 'By place'
