Added edit and delete buttons to place#show

--- a/config/locales/views/places/show.ru.yml
+++ b/config/locales/views/places/show.ru.yml
@@ -2,3 +2,4 @@ ru:
   places:
     show:
       visited_by: 'Здесь летали'
+      delete_confirmation: 'Вы уверены, что хотиту удалить эту локацию?'
