--- a/config/locales/views/static_pages/index.ru.yml
+++ b/config/locales/views/static_pages/index.ru.yml
@@ -24,7 +24,7 @@ ru:
         location: 'Локация:'
         location_plh: 'ДЗ, горы, и т.д.'
         file: "Файл трека:"
-        help: 'Поддерживаются файлы в формате csv и gpx'
+        help: 'Поддерживаются файлы в формате csv, gpx, tes и kml'
         comment: 'Комментарий:'
         comment_plh: 'Пара слов о Вашем полете'
         submit: 'Загрузить'
