added supported devices to start page, show 3 winners on start page for each competitor

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -55,7 +55,7 @@ de:
         kind: "Art des Sprunges:"
       desc: "Die Analyse der GPS Tracks und die Durchführung der Wettkämpfe im Format GPS Performance."
       goto_event: "Auf die Seite Ereignisse >>"
-      supported_formats: "Unterstützte Dateiformate und Geräte:"
+      supported_formats: "Unterstützte Dateiformate und Geräte"
       stats: "Statistik:"
       stats_tracks: "Hochgeladene Tracks:"
       stats_pilots: "Registrierte Piloten:"
