--- a/config/locales/views/static_pages/index.ru.yml
+++ b/config/locales/views/static_pages/index.ru.yml
@@ -40,12 +40,11 @@ ru:
         kind: "Вид прыжка:"
       desc: "Анализ GPS треков и проведение соревнований в формате GPS Performance."
       goto_event: "На страницу события >>"
-      supported_formats: "Поддерживаемые форматы и приборы:"
+      supported_formats: "Поддерживаемые форматы и приборы"
       stats: "Статистика:"
       stats_tracks: "Загружено треков:"
       stats_pilots: "Зарегистрировано пилотов:"
       analyze: "Анализируйте"
       select_free_fall_range: "Выберите диапазон свободного падения"
       upload_a_file: "Загрузите трек"
-      how_it_works: "Это очень просто:"
-
+      how_it_works: "Это очень просто"
