--- a/config/locales/views/static_pages/index.en.yml
+++ b/config/locales/views/static_pages/index.en.yml
@@ -40,12 +40,11 @@ en:
         kind: "Kind of jump:"
       desc: "GPS Tracks analyzer and GPS perfomance competition front-end"
       goto_event: "Go to event >>"
-      supported_formats: "Supported file formats and GPS loggers:"
+      supported_formats: "Supported file formats and GPS loggers"
       stats: "Statistics:"
       stats_tracks: "Uploaded tracks:"
       stats_pilots: "Registered pilots:"
-      how_it_works: "It is pretty simple:"
+      how_it_works: "It is pretty simple"
       upload_a_file: "Upload a file"
       select_free_fall_range: "Select free fall range"
       analyze: "Analyze"
-
