Added basic wind cancellation feature

--- a/config/locales/views/events/show.ru.yml
+++ b/config/locales/views/events/show.ru.yml
@@ -33,3 +33,4 @@ ru:
       add_sponsor: 'Добавить спонсора'
       judges: 'Судьи'
       add_judge: 'Добавить судью'
+      weather_data: 'Сведения о ветре'
