--- a/config/locales/models/weather_datum.ru.yml
+++ b/config/locales/models/weather_datum.ru.yml
@@ -6,3 +6,5 @@ ru:
           attributes:
             wind_direction:
               inclusion: 'Направление ветра должно быть задано в диапазоне от 0 до 359 градусов'
+            actual_on:
+              blank: 'Дата должна быть заполнена.'
